tests/paczka1/fuzzy1/95013975.err
Error in line 1: byy A864 93,3
Error in line 8: byy S523 53,5
Error in line 10: x543DR6tkU S972 72,0
Error in line 22: tZU249 A864 -3,3
Error in line 2: tZU249 A864 53,4
Error in line 21: byy S523 91,4
Error in line 32: 5DBiPb A864 7,3
